--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -4,16 +4,18 @@
     <meta charset="UTF-8"/>
     <title>Coding Events</title>
 
-    <script th:src = "@{/script.js}"></script>
-    <link th:href = "@{/styles.css}" rel = "stylesheet">
+    <link th:href = "@{https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css}" rel = "stylesheet">
+    <script th:src = "@{https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js}"></script>
+<!--    <script th:src = "@{/script.js}"></script>-->
+<!--    <link th:href = "@{/styles.css}" rel = "stylesheet">-->
 
 </head>
 <body>
 
 <nav th:fragment = "navigation">
-    <ul>
-        <li><a href = "/events">All Events</a></li>
-        <li><a href = "/events/create">Create Event</a></li>
+    <ul class = "nav">
+        <li class = "nav-item"><a class = "nav-link" href = "/events">All Events</a></li>
+        <li class = "nav-item"><a class = "nav-link" href = "/events/create">Create Event</a></li>
     </ul>
 </nav>
 
