--- a/src/main/resources/templates/events/index.html
+++ b/src/main/resources/templates/events/index.html
@@ -1,20 +1,28 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="https://www.thymeleaf.org/">
-<head>
-    <meta charset="UTF-8"/>
-    <title>Coding Events</title>
-</head>
+<head th:replace = "fragments :: head"></head>
 <body>
 
 <h1>All Events</h1>
 
+<nav th:replace = "fragments :: navigation"></nav>
+
 <p th:unless = "${events} and ${events.size()}">No events!</p>
 
-<ul>
-    <th:block th:each = "event: ${events}">
-        <li th:text = "${event}"></li>
-    </th:block>
-</ul>
+<table class = "table table-striped">
+    <thead>
+        <tr>
+            <th>Name</th>
+            <th>Description</th>
+            <th>Address</th>
+        </tr>
+    </thead>
+    <tr th:each = "event: ${events}">
+        <td th:text = "${event.getKey()}"></td>
+        <td th:text = "${event.getValue()}"></td>
+        <td th:replace = "fragments :: address"></td>
+    </tr>
+</table>
 
 </body>
 </html>
