Deleted an event.

--- a/src/main/resources/templates/events/index.html
+++ b/src/main/resources/templates/events/index.html
@@ -3,9 +3,7 @@
 <head th:replace = "fragments :: head"></head>
 <body class = "container">
 
-<h1>All Events</h1>
-
-<nav th:replace = "fragments :: navigation"></nav>
+<header th:replace = "fragments :: header"></header>
 
 <p th:unless = "${events} and ${events.size()}">No events!</p>
 
