--- a/src/main/resources/templates/events/delete.html
+++ b/src/main/resources/templates/events/delete.html
@@ -16,7 +16,7 @@
             </div>
         </th:block>
 
-    <input type = "submit" value = "delete" class = "btn btn-danger">
+    <input type = "submit" value = "Delete Event" class = "btn btn-danger">
 </form>
 
 </body>
