--- a/src/main/resources/templates/events/create.html
+++ b/src/main/resources/templates/events/create.html
@@ -8,13 +8,21 @@
 <form method = "post" action = "/events/create">
     <div class = "form-group">
         <label>Name
-            <input type = "text" name = "name" class = "form-control">  <!-- name = "eventName" without Model-Binding -->
+            <input th:field = "${event.name}" class = "form-control">  <!-- name = "eventName" without Model-Binding / type = "text" name = "name" with Model-Binding -->
         </label>
+        <p class = "error" th:errors = "${event.name}"></p>
     </div>
     <div class = "form-group">
         <label>Description
-            <input type = "text" name = "description" class = "form-control">  <!-- name = "eventDescription" without Model-Binding -->
+            <input th:field = "${event.description}" class = "form-control">  <!-- name = "eventDescription" without Model-Binding / type = "text" name = "description" with Model-Binding -->
         </label>
+        <p class = "error" th:errors = "${event.description}"></p>
+    </div>
+    <div class = "form-group">
+        <label>Contact Email
+            <input th:field = "${event.contactEmail}" class = "form-control">
+        </label>
+        <p class = "error" th:errors = "${event.contactEmail}"></p>
     </div>
     <div class = "form-group">
         <input type = "submit" value = "Create Event" class = "btn btn-success">
