--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -7,7 +7,7 @@
     <link th:href = "@{https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css}" rel = "stylesheet">
     <script th:src = "@{https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js}"></script>
 <!--    <script th:src = "@{/script.js}"></script>-->
-<!--    <link th:href = "@{/styles.css}" rel = "stylesheet">-->
+    <link th:href = "@{/styles.css}" rel = "stylesheet">
 
 </head>
 <body>
