--- a/src/main/resources/templates/events/index.html
+++ b/src/main/resources/templates/events/index.html
@@ -14,6 +14,7 @@
             <th>Name</th>
             <th>Description</th>
             <th>Contact Email</th>
+            <th>Type</th>
             <th>Editable</th>
         </tr>
     </thead>
@@ -22,6 +23,7 @@
         <td th:text = "${event.name}"></td>
         <td th:text = "${event.description}"></td>
         <td th:text = "${event.contactEmail}"></td>
+        <td th:text = "${event.type.displayName}"></td>
         <td>
             <a th:href="@{/events/edit/{id}(id=${event.id})}">Edit</a>
         </td>
