--- a/src/main/resources/templates/events/index.html
+++ b/src/main/resources/templates/events/index.html
@@ -15,15 +15,21 @@
             <th>Description</th>
             <th>Contact Email</th>
             <th>Type</th>
+            <th>Location</th>
+            <th>Number of Attendees</th>
+            <th>Registration</th>
             <th>Editable</th>
         </tr>
     </thead>
-    <tr th:each = "event: ${events}">
+    <tr th:each = "event : ${events}">
         <td th:text = "${event.id}"></td>
         <td th:text = "${event.name}"></td>
         <td th:text = "${event.description}"></td>
         <td th:text = "${event.contactEmail}"></td>
         <td th:text = "${event.type.displayName}"></td>
+        <td th:text = "${event.location}"></td>
+        <td th:text = "${event.attendees}"></td>
+        <td th:text = "${event.registration}"></td>
         <td>
             <a th:href="@{/events/edit/{id}(id=${event.id})}">Edit</a>
         </td>
