--- a/src/main/resources/templates/events/edit.html
+++ b/src/main/resources/templates/events/edit.html
@@ -20,6 +20,31 @@
             <input type = "text" name = "description" class = "form-control" th:value = "${event.description}">  <!-- name = "eventDescription" without Model-Binding -->
         </label>
     </div>
+    <div class = "form-group">
+        <label>Name
+            <input type = "text" name = "contactEmail" class = "form-control" th:value = "${event.contactEmail}">
+        </label>
+    </div>
+    <div class = "form-group">
+        <label>Type
+            <select th:field = "${event.type}">
+                <option th:each = "type : ${types}"
+                        th:value = "${type}"
+                        th:text = "${type.displayName}">
+                </option>
+            </select>
+        </label>
+    </div>
+    <div class = "form-group">
+        <label>Location
+            <input type = "text" name = "location" class = "form-control" th:value = "${event.location}">
+        </label>
+    </div>
+    <div class = "form-group">
+        <label>Number of Attendees
+            <input type = "number" name = "attendees" class = "form-control" th:value = "${event.attendees}">
+        </label>
+    </div>
     <input type="hidden" th:value="${event.id}" name="eventId" />
     <div class = "form-group">
         <input type = "submit" value = "Edit Event" class = "btn btn-success">
