--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="https://www.thymeleaf.org/">
-<head th:replace = "fragments :: head"></head>
-<body class = "container">
+<head th:replace="fragments :: head"></head>
+<body class="container">
 
-<header th:replace = "fragments :: header"></header>
+<h1>Coding Events</h1>
+
+<header th:replace="fragments :: header"></header>
 
 </body>
 </html>
