--- a/src/main/resources/templates/eventCategories/create.html
+++ b/src/main/resources/templates/eventCategories/create.html
@@ -1,20 +1,18 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="https://www.thymeleaf.org/">
-<head th:replace = "fragments :: head"></head>
-<body class = "container">
+<head th:replace="fragments :: head"></head>
+<body class="container">
 
-<header th:replace = "fragments :: header"></header>
+<header th:replace="fragments :: header"></header>
 
-<form method = "post" action = "/eventCategories/create">
-    <div class = "form-group">
+<form method="post">
+    <div class="form-group">
         <label>Name
-            <input th:field = "${eventCategory.name}" class = "form-control">
+            <input th:field="${eventCategory.name}" class="form-control">
         </label>
-        <p class = "error" th:errors = "${eventCategory.name}"></p>
+        <span th:errors="${eventCategory.name}" class="error"></span>
     </div>
-    <div class = "form-group">
-        <input type = "submit" value = "Create" class = "btn btn-success">
-    </div>
+    <input type="submit" value="Create" class="btn btn-primary">
 </form>
 
 </body>
