--- a/src/main/resources/templates/events/delete.html
+++ b/src/main/resources/templates/events/delete.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="https://www.thymeleaf.org/">
-<head th:replace = "fragments :: head"></head>
-<body class = "container">
+<head th:replace="fragments :: head"></head>
+<body class="container">
 
-<header th:replace = "fragments :: header"></header>
+<header th:replace="fragments :: header"></header>
 
-<form method = "post">
+<form method="post">
 
-        <th:block th:each = "event : ${events}">
-            <div class = "form-group">
+    <th:block th:each="event : ${events}">
+        <div class="form-group">
             <label>
-                <span th:text = "${event.name}"></span>
-                <input type = "checkbox" name = "eventIds" th:value = "${event.id}" class = "form-control">
+                <span th:text="${event.name}"></span>
+                <input type="checkbox" name="eventIds" th:value="${event.id}" class="form-control">
             </label>
-            </div>
-        </th:block>
+        </div>
+    </th:block>
 
-    <input type = "submit" value = "Delete Event" class = "btn btn-danger">
+    <input type="submit" value="Delete" class="btn btn-danger">
 </form>
 
 </body>
