--- a/src/main/resources/templates/events/detail.html
+++ b/src/main/resources/templates/events/detail.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="en" xmlns:th="https://www.thymeleaf.org/">
 <head th:replace="fragments :: head"></head>
 <body class="container">
@@ -19,8 +18,15 @@
         <th>Contact Email</th>
         <td th:text="${event.eventDetails.contactEmail}"></td>
     </tr>
+    <tr>
+        <th>Tags</th>
+        <td>
+            <span th:each="tag : ${tags}" th:text="${tag.displayName} + ' '"></span>
+        </td>
+    </tr>
 </table>
 
+<a th:href="'/events/add-tag?eventId=' + ${event.id}">Add Tag</a>
 
 </body>
 </html>
